# iqmk

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  run_test.sh  run_tests.sh
boards/pico/: CMakeLists.txt  todo.txt
boards/pico/layouts/test/: keymap.c
boards/pico/qmk_shim/: platform_deps.h
boards/pico/qmkshim/: timer.c
boards/pico/shim/: _wait.h  bootloader.c  driver.c  eeprom.c  protocol.c  timer.c  usb.c  wait.c
boards/pico/src/: i2c_bus_scan.c  main.c  usb.c  util.c
cmake/: CMakeLists.txt.in  CMakeLists_pico.txt.in  CMakeLists_qmk.txt.in  git_sparse_clone.cmake  pico_sdk_import.cmake  qmk_common.cmake  qmk_test.cmake  qmk_tests.cmake
tests/: CMakeLists.txt
